src/Components/NavBar/MobileNav/MobileNav.module.scss
@import "src/Global/SASS/variables";

.mobileNav {
  position: absolute;
  right: 1rem;
  top: 2.5rem;
  @include desktop-view {
    display: none;
  }
}

.hamburger {
  height: 32px;
  width: 32px;
  margin-bottom: 1rem;
  svg {
    fill: colors(white);
    height: 100%;
    width: 100%;
  }
}

